--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -1,8 +1,8 @@
 name: terraform-apply
 on:
-  push:
-    branches: [ main ]
-    paths: ["envs/dev/**","modules/**","files/**",".github/workflows/**"]
+  # push:
+  #   branches: [ main ]
+  #   paths: ["envs/dev/**","modules/**","files/**",".github/workflows/**"]
   workflow_dispatch: {}
 permissions:
   id-token: write
