--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -1,7 +1,6 @@
 name: terraform-plan
 on:
-  pull_request:
-    paths: ["envs/dev/**","modules/**","files/**",".github/workflows/**"]
+  workflow_dispatch: {}
 permissions:
   id-token: write
   contents: read
