--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -2,6 +2,10 @@ name: plan
 on:
   workflow_dispatch: {}
 
+permissions:
+  id-token: write
+  contents: read
+  
 jobs:
   plan:
     uses: ./.github/workflows/tf-base.yml
