--- a/.github/workflows/tf-base.yml
+++ b/.github/workflows/tf-base.yml
@@ -23,10 +23,14 @@ jobs:
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ROLE_ARN }}:role/ma-tf-gha-role
+          role-session-name: gha-terraform
           aws-region: us-east-1
           audience: sts.amazonaws.com
 
+      - name: Verify identity
+        run: aws sts get-caller-identity
+        
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
