--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -5,11 +5,12 @@ on:
 permissions:
   id-token: write
   contents: read
-  
+
 jobs:
   apply:
     uses: ./.github/workflows/tf-base.yml
     with:
       mode: apply
+      working-directory: envs/dev
     secrets:
       AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
