--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -5,11 +5,12 @@ on:
 permissions:
   id-token: write
   contents: read
-  
+
 jobs:
   plan:
     uses: ./.github/workflows/tf-base.yml
     with:
       mode: plan
+      working-directory: envs/dev
     secrets:
       AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
