--- a/.github/workflows/tf-base.yml
+++ b/.github/workflows/tf-base.yml
@@ -38,18 +38,18 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: ./terraform
+        working-directory: ${{ inputs.working-directory }}
 
       - name: Terraform Validate
         run: terraform validate
-        working-directory: ./terraform
+        working-directory: ${{ inputs.working-directory }}
 
       - name: Terraform Plan
         if: ${{ inputs.mode == 'plan' }}
         run: terraform plan -input=false -no-color
-        working-directory: ./terraform
+        working-directory: ${{ inputs.working-directory }}
 
       - name: Terraform Apply
         if: ${{ inputs.mode == 'apply' }}
         run: terraform apply -input=false -auto-approve -no-color
-        working-directory: ./terraform
+        working-directory: .${{ inputs.working-directory }}
