--- a/.github/workflows/tf-base.yml
+++ b/.github/workflows/tf-base.yml
@@ -44,6 +44,10 @@ jobs:
         run: terraform init
         working-directory: ${{ inputs.tf_workdir }}
 
+      - name: Terraform Fmt (write changes)
+        run: terraform fmt -recursive
+        working-directory: ${{ inputs.tf_workdir }}
+
       - name: Terraform Validate
         run: terraform validate
         working-directory: ${{ inputs.tf_workdir }}
