--- a/.github/workflows/tf-base.yml
+++ b/.github/workflows/tf-base.yml
@@ -54,10 +54,14 @@ jobs:
 
       - name: Terraform Plan
         if: ${{ inputs.mode == 'plan' }}
+        env:
+          TF_VAR_ma_admin_token: ${{ secrets.MA_ADMIN_TOKEN }}
         run: terraform plan -input=false -no-color
         working-directory: ${{ inputs.tf_workdir }}
 
       - name: Terraform Apply
         if: ${{ inputs.mode == 'apply' }}
+        env:
+          TF_VAR_ma_admin_token: ${{ secrets.MA_ADMIN_TOKEN }}
         run: terraform apply -input=false -auto-approve -no-color
         working-directory: ${{ inputs.tf_workdir }}
