--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -11,6 +11,6 @@ jobs:
     uses: ./.github/workflows/tf-base.yml
     with:
       mode: apply
-      working-directory: envs/dev
+      tf_workdir: envs/dev
     secrets:
       AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
