--- a/.github/workflows/tf-base.yml
+++ b/.github/workflows/tf-base.yml
@@ -55,6 +55,7 @@ jobs:
       - name: Terraform Plan
         if: ${{ inputs.mode == 'plan' }}
         env:
+          TF_VAR_github_token: ${{ secrets.MA_GITHUB_TOKEN }}
           TF_VAR_ma_admin_token: ${{ secrets.MA_ADMIN_TOKEN }}
         run: terraform plan -input=false -no-color
         working-directory: ${{ inputs.tf_workdir }}
@@ -62,6 +63,15 @@ jobs:
       - name: Terraform Apply
         if: ${{ inputs.mode == 'apply' }}
         env:
+          TF_VAR_github_token: ${{ secrets.MA_GITHUB_TOKEN }}
           TF_VAR_ma_admin_token: ${{ secrets.MA_ADMIN_TOKEN }}
         run: terraform apply -input=false -auto-approve -no-color
+        working-directory: ${{ inputs.tf_workdir }}
+
+      - name: Terraform Destroy
+        if: ${{ inputs.mode == 'destroy' }}
+        env:
+          TF_VAR_github_token: ${{ secrets.MA_GITHUB_TOKEN }}
+          TF_VAR_ma_admin_token: ${{ secrets.MA_ADMIN_TOKEN }}
+        run: terraform destroy -auto-approve
         working-directory: ${{ inputs.tf_workdir }}
