--- a/.github/workflows/tf-base.yml
+++ b/.github/workflows/tf-base.yml
@@ -42,6 +42,9 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        env:
+          TF_VAR_github_token: ${{ secrets.MA_GITHUB_TOKEN }}
+          TF_VAR_ma_admin_token: ${{ secrets.MA_ADMIN_TOKEN }}
         working-directory: ${{ inputs.tf_workdir }}
 
       - name: Terraform Fmt (write changes)
@@ -50,6 +53,9 @@ jobs:
 
       - name: Terraform Validate
         run: terraform validate
+        env:
+          TF_VAR_github_token: ${{ secrets.MA_GITHUB_TOKEN }}
+          TF_VAR_ma_admin_token: ${{ secrets.MA_ADMIN_TOKEN }}
         working-directory: ${{ inputs.tf_workdir }}
 
       - name: Terraform Plan
