--- a/files/docker-compose.yml
+++ b/files/docker-compose.yml
@@ -24,44 +24,38 @@ services:
       OLLAMA_KEEP_ALIVE: 24h
     entrypoint: ["/bin/sh","-lc","ollama serve & sleep 3 && ollama pull llama3.1:8b && wait"]
 
-  api:
-    image: ghcr.io/yourorg/ma-api:latest  # TODO: replace with your image
-    container_name: ma-api
-    depends_on: [pgvector, redis, ollama]
-    environment:
-      DB_URL: postgresql://ma:ma_pw@pgvector:5432/ma_db
-      REDIS_URL: redis://redis:6379/0
-      OLLAMA_BASE_URL: http://ollama:11434
-      MA_ADMIN_TOKEN_FILE: /run/secrets/admin_token
-      GITHUB_TOKEN_FILE: /run/secrets/github_token
-    secrets:
-      - admin_token
-      - github_token
-    command: ["uvicorn","ma.api.app:app","--host","0.0.0.0","--port","8502"]
-
   worker:
-    image: ghcr.io/yourorg/ma-api:latest  # TODO: replace with your image
+    image: ma-worker:latest
     container_name: ma-worker
     depends_on: [pgvector, redis]
     environment:
       DB_URL: postgresql://ma:ma_pw@pgvector:5432/ma_db
       REDIS_URL: redis://redis:6379/0
-    command: ["rq","worker","ma-queue"]
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+    command: ["rq", "worker", "-u", "redis://redis:6379/0", "ma-queue"]
+
+  api:
+    image: ma-api:latest
+    container_name: ma-api
+    depends_on: [pgvector, redis, ollama]
+    ports:
+      - "8000:8000"
+    environment:
+      DB_URL: postgresql://ma:ma_pw@pgvector:5432/ma_db
+      REDIS_URL: redis://redis:6379/0
+      OLLAMA_BASE_URL: http://ollama:11434
+      API_HOST: 0.0.0.0
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+    # REMOVE any `command:` override here. Use Dockerfile's CMD.
 
   ui:
-    image: ghcr.io/yourorg/ma-ui:latest  # TODO: replace with your image
+    image: ma-ui:latest
     container_name: ma-ui
     depends_on: [api]
     environment:
-      API_BASE_URL: http://ma-api:8502
+      API_URL: http://ma-api:8000    # <— matches Streamlit app.py
     ports:
-      - "8501:8501"  # Streamlit default
-
-secrets:
-  admin_token:
-    file: /opt/ma/admin_token
-  github_token:
-    file: /opt/ma/github_token
+      - "8501:8501"
 
 volumes:
   pgdata:
